# ablm-forge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
scripts/: pretrain.py
src/ablm/: __init__.py  __main__.py  cli.py  config.py  train.py
src/ablm/configs/: __init__.py
src/ablm/configs/data/: base.yaml
src/ablm/configs/model/: __init__.py  base.yaml
src/ablm/configs/model/presets/: 12B.yaml  170M.yaml  1B.yaml  3B.yaml  400M.yaml  50M.yaml  6B.yaml  800M.yaml  __init__.py  esmc_300m.yaml  esmc_600m.yaml  esmc_6b.yaml
src/ablm/configs/train/: base.yaml
src/ablm/data/: __init__.py  config.py  loaders.py  tokenizer.py
src/ablm/data/sequence/: __init__.py  collate.py  dataset.py
src/ablm/model/: __init__.py  attention.py  configuration_ablm.py  conv.py  embedding.py  ffn.py  masking.py  modeling_ablm.py  norm.py  outputs.py  rope.py  tokenization_ablm.py  transformer.py
src/ablm/training/: __init__.py  grouping.py  muon.py  optim.py  optim_registry.py
tests/: conftest.py
tests/data/: conftest.py  test_config.py  test_import_hygiene.py  test_loaders.py  test_tokenizer.py
tests/data/sequence/: test_collate.py  test_dataset.py
tests/fixtures/training/: README.md
tests/model/: test_attention.py  test_auto_classes.py  test_config.py  test_conv.py  test_e2e_attention_parity.py  test_e2e_forward.py  test_embedding.py  test_esm_alignment.py  test_esmc_api.py  test_ffn.py  test_gradient_checkpointing.py  test_masking.py  test_norm.py  test_outputs.py  test_pilot_train.py  test_push_to_hub.py  test_rope.py  test_save_load.py  test_toggles.py  test_tokenizer.py  test_transformer.py
tests/training/: test_optim.py  test_optim_registry.py  test_pilot_fsdp.py  test_pilot_train.py
